# fatcode

./: .env.dev  .env.example  .gitignore  Dockerfile  Dockerfile-poetry  Dockerfile.prod  Dockerfile.prod.old  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  loaddata.json  manage.py  nginx-conf  pyproject.toml  req.txt  requirements.txt
.github/workflows/: ci.yaml  future.yaml
fatcode/: asgi.py  celery.py  settings.py  settings_BACKUP_1836.py  settings_LOCAL_1836.py  settings_REMOTE_1836.py  urls.py  wsgi.py  yasg.py
nginx/: nginx.conf
src/base/: exceptions.py  generate_path.py  permissions.py  serializers.py  service.py  validators.py
src/cat/: admin.py  apps.py  crontabs.py  models.py  permissions.py  serializers.py  services.py  settings.py  signals.py  tasks.py  tests.py  urls.py  views.py
src/courses/: admin.py  apps.py  filters.py  models.py  serializers.py  service.py  services.py  tests.py  urls.py  validators.py  views.py
src/dashboard/: models.py  permissions.py  serializers.py  urls.py  views.py
src/data/: admin.py  apps.py  filters.py  urls.py  views.py
src/event/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
src/knowledge/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
src/profiles/: admin.py  apps.py  filters.py  forms.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  tokenizator.py  urls.py  validators.py  views.py
src/questionnaire/: admin.py  apps.py  filters.py  models.py  (+7 more)
(+61 files in other folders)
