[tool.poetry]
name = "fatcode"
version = "0.1.0"
description = ""
authors = ["Omelchenko Michael <socanime@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
djangorestframework = "^3.14.0"
celery = "^5.2.7"
django-ckeditor = "^6.5.1"
djoser = "^2.1.0"
drf-yasg = "^1.21.4"
gunicorn = "^20.1.0"
django-filter = "^22.1"
Pillow = "^9.3.0"
psycopg2 = "^2.9.5"
PyGithub = "^1.57"
redis = "^4.3.4"
python-telegram-bot = "^13.14"
django-cors-headers = "^3.13.0"
django-celery-beat = "^2.4.0"

[tool.poetry.dev-dependencies]
django-silk = "^5.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
